fix: modal overlay z-index

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
+  z-index: 99;
   top: 0;
   left: 0;
   height: 100vh;
